--- a/views/pasados.erb
+++ b/views/pasados.erb
@@ -21,6 +21,14 @@
                 <div class="w3-card-2">
                     <img src="/imagenes/galeria/band1.jpg" class="w3-border w3-padding" style="width:100%">
                     <div class="w3-container">
+                        <h5>El Beto!</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="w3-quarter w3-display-container">
+                <div class="w3-card-2">
+                    <img src="/imagenes/galeria/bandd.jpg" class="w3-border w3-padding" style="width:100%">
+                    <div class="w3-container">
                         <h5>La banda loca!</h5>
                     </div>
                 </div>
@@ -29,15 +37,7 @@
                 <div class="w3-card-2">
                     <img src="/imagenes/galeria/bandd.jpg" class="w3-border w3-padding" style="width:100%">
                     <div class="w3-container">
-                        <h5>El Beto!</h5>
-                    </div>
-                </div>
-            </div>
-            <div class="w3-quarter w3-display-container">
-                <div class="w3-card-2">
-                    <img src="/imagenes/galeria/band1.jpg" class="w3-border w3-padding" style="width:100%">
-                    <div class="w3-container">
-                        <h5>Dani!</h5>
+                        <h5>La banda loca completa!</h5>
                     </div>
                 </div>
             </div>
@@ -45,7 +45,7 @@
                 <div class="w3-card-2">
                     <img src="/imagenes/galeria/band2.jpg" class="w3-border w3-padding" style="width:100%">
                     <div class="w3-container">
-                        <h5>Romi!</h5>
+                        <h5>Pedales!</h5>
                     </div>
                 </div>
             </div>
@@ -57,7 +57,7 @@
                 <div class="w3-card-2">
                     <img src="/imagenes/galeria/band3.jpg" class="w3-border w3-padding" style="width:100%">
                     <div class="w3-container">
-                        <h5>Danilo!</h5>
+                        <h5>Dani!!</h5>
                     </div>
                 </div>
             </div>
@@ -65,7 +65,7 @@
                 <div class="w3-card-2">
                     <img src="/imagenes/galeria/band4.jpg" class="w3-border w3-padding" style="width:100%">
                     <div class="w3-container">
-                        <h5>El pela!</h5>
+                        <h5>La banda!</h5>
                     </div>
                 </div>
             </div>
@@ -73,7 +73,7 @@
                 <div class="w3-card-2">
                     <img src="/imagenes/galeria/band5.jpg" class="w3-border w3-padding" style="width:100%">
                     <div class="w3-container">
-                        <h5>Herny!</h5>
+                        <h5>Beto!</h5>
                     </div>
                 </div>
             </div>
@@ -82,7 +82,7 @@
                 <div class="w3-card-2">
                     <img src="/imagenes/galeria/band6.jpg" class="w3-border w3-padding" style="width:100%">
                     <div class="w3-container">
-                        <h5>Uri!</h5>
+                        <h5>Los temas!</h5>
                     </div>
                 </div>
             </div>
