--- a/views/index.erb
+++ b/views/index.erb
@@ -28,7 +28,7 @@
 
             <!-- Automatic Slideshow Images -->
             <div class="mySlides w3-display-container ">
-                <img src="/imagenes/logoancho.jpg" class="w3-animate-bottom" style="width:100%">
+                <img src="/imagenes/slide/buenacosecha.jpg" class="w3-animate-bottom" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!</h3>
                     <p>
@@ -36,7 +36,7 @@
                     </p>
                 </div>
             </div>
-            <div class="mySlides w3-display-container ">
+            <!--  <div class="mySlides w3-display-container ">
                 <img src="/imagenes/galeria/bandd.jpg" class="w3-animate-top" style="width:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!</h3>
@@ -116,7 +116,7 @@
                         <b>En vivo!</b>
                     </p>
                 </div>
-            </div>
+            </div> -->
 
 
             <!-- The Band Section -->
