--- a/views/index.erb
+++ b/views/index.erb
@@ -28,7 +28,7 @@
 
             <!-- Automatic Slideshow Images -->
             <div class="mySlides w3-display-container ">
-                <img src="/imagenes/galeria/fechas/flyersalon.jpg" class="w3-animate-bottom" style="width:100%" width="1400px" height="900px">
+                <img src="/imagenes/galeria/fechas/flyersalon.jpg" class="w3-animate-bottom" style="width:100% height:100%">
                 <div class="w3-display-bottommiddle w3-container w3-text-white w3-padding-32 w3-hide-small">
                     <h3>Buena Cosecha!</h3>
                     <p>
