--- a/views/layout.erb
+++ b/views/layout.erb
@@ -36,7 +36,7 @@
             </li>
 
             <li class="w3-hide-small w3-dropdown-hover">
-                <a href="recitales" class="w3-hover-none w3-padding-large" title="Musica">
+                <a href="shows" class="w3-hover-none w3-padding-large" title="Musica">
                     <i class="material-icons">photo_library</i>
                     Shows
                 </a>
