--- a/views/pasados.erb
+++ b/views/pasados.erb
@@ -15,6 +15,11 @@
             <p>Show debut de Buena Cosecha !!</p></a>
         </div>
 
+        <div class="w3-container w3-leftbar w3-border-deep-orange w3-orange">
+            <a href="salon"> <h3>Salon Pueyrredon | 2 de Septiembre del 2016</h3>
+            <p>Segundo show de Buena Cosecha !!</p></a>
+        </div>
+
 
     </body>
 </html>
