--- a/views/proximos.erb
+++ b/views/proximos.erb
@@ -4,12 +4,13 @@
         <meta charset="utf-8">
         <title>Buena Cosecha, Ska Reggae | Próximos recitales</title>
     </head>
+    <br>
+    <br>
+    <br>
+
     <body>
+<h3> Sabado 3 de Septiembre en el Salón Pueyrredon (Av. Sta Fe 4560 CABA), 23 hs, $80</h3>
+<h3> Viernes 21 de Octubre en la Fiesta de la Flor (Suipacha 842 CABA), 23 hs, $50 anticipadas $70 en puerta</h3>
 
-        <br>
-        <br>
-        <br>
-
-<img src="/imagenes/galeria/fechas/flyersalon.jpg" alt="salon" width="1400px" height="900px" />
     </body>
 </html>
