--- a/views/proximos.erb
+++ b/views/proximos.erb
@@ -9,7 +9,7 @@
     <br>
 
     <body>
-<a href="https://www.facebook.com/events/1025566494228984/"><h3> Sabado 3 de Septiembre en el Salón Pueyrredon (Av. Sta Fe 4560 CABA), 23 hs, $80</h3></a>
+<a href="https://www.facebook.com/events/1025566494228984/" target="_blank"> <h3> Sabado 3 de Septiembre en el Salón Pueyrredon (Av. Sta Fe 4560 CABA), 23 hs, $80</h3> </a>
 <h3> Viernes 21 de Octubre en la Fiesta de la Flor (Suipacha 842 CABA), 23 hs, $50 anticipadas $70 en puerta</h3>
 
     </body>
