--- a/views/multimedia.erb
+++ b/views/multimedia.erb
@@ -8,12 +8,12 @@
   <br>
   <br>
   <br>
-  
+
   <body>
     <ul>
-      <li> Audios <a href="audios"></a></li>
-      <li> Videos <a href="videos"></a></li>
-      <li> Letras <a href="letras"></a></li>
+      <a href="audios"><li> Audios </li></a>
+      <a href="videos"><li> Videos </li></a>
+      <a href="letras"><li> Letras </li></a>
     </ul>
 
   </body>
