--- a/views/multimedia.erb
+++ b/views/multimedia.erb
@@ -2,7 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <style type="text/css">
+        .quitar {
+            text-decoration: none;
+        }
+    </style>
+    <title>Buena Cosecha, Ska Reggae | Música</title>
   </head>
 
   <br>
@@ -11,9 +16,9 @@
 
   <body>
     <ul>
-      <a href="audios"><li> Audios </li></a>
-      <a href="videos"><li> Videos </li></a>
-      <a href="letras"><li> Letras </li></a>
+      <a href="audios" class="quitar"><li> Audios </li></a>
+      <a href="videos" class="quitar"><li> Videos </li></a>
+      <a href="letras" class="quitar"><li> Letras </li></a>
     </ul>
 
   </body>
