--- a/views/shows.erb
+++ b/views/shows.erb
@@ -10,25 +10,21 @@
         <br>
         <br>
 
-        <ul>
-            <div class="w3-container w3-leftbar w3-border-deep-orange w3-orange">
+        <div class="w3-container w3-leftbar w3-border-deep-orange w3-orange">
 
-                <a href="pasados">
-                    <li>Pasados
+            <a href="pasados">
+                <h3>Pasados</h3>
 
-                    </li>
-                </a>
-            </div>
-            <br>
-            <div class="w3-container w3-leftbar w3-border-cyan w3-light-blue">
+            </a>
+        </div>
+        <br>
+        <div class="w3-container w3-leftbar w3-border-cyan w3-light-blue">
 
-                <a href="proximos">
-                    <li>
-                        Próximos
-                    </li>
-                </a>
-            </div>
-            <br>
-        </ul>
+            <a href="proximos">
+                <h3>Próximos</h3>
+
+            </a>
+        </div>
+        <br>
     </body>
 </html>
