--- a/views/secciones/pasados2.erb
+++ b/views/secciones/pasados2.erb
@@ -14,44 +14,43 @@
         <title>Buena Cosecha, Ska Reggae | Recitales pasados</title>
     </head>
     <body>
+        <br>
+        <br>
+        <br>
 
-<div class="w3-container">
-  <ul class="w3-ul w3-card-4">
-    <li class="w3-padding-16">
-      <span onclick="this.parentElement.style.display='none'"
-      class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
-      <img src="/imagenes/galeria/slide/banda6.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
-      <span class="w3-xlarge">Parque Saavedra | CABA</span><br>
-      <span>24 de Septiembre de 2016</span>
-      <a href="pquesaavedra" class="quitar"></a>
-    </li>
-    <li class="w3-padding-16">
-      <span onclick="this.parentElement.style.display='none'"
-     class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
-      <img src="img_avatar5.png" class="w3-left w3-circle w3-margin-right" style="width:60px">
-      <span class="w3-xlarge">White Vinyl | Adrogue</span><br>
-      <span>17 de Septiembre de 2016</span>
-      <a href="whitevinyl" class="quitar"></a>
+        <div class="w3-container">
+            <ul class="w3-ul w3-card-4">
+                <li class="w3-padding-16">
+                    <span onclick="this.parentElement.style.display='none'" class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
+                    <a href="pquesaavedra" class="quitar"> <img src="/imagenes/galeria/pquesaavedra1-10/banda6.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
+                    <span class="w3-xlarge">Parque Saavedra | CABA</span><br>
+                    <span>24 de Septiembre de 2016</span>
+                    </a>
+                </li>
+                <li class="w3-padding-16">
+                    <span onclick="this.parentElement.style.display='none'" class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
+                    <a href="whitevinyl" class="quitar"> <img src="/imagenes/galeria/fechas/whitevinyl24-10/banda2.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
+                    <span class="w3-xlarge">White Vinyl | Adrogue</span><br>
+                    <span>17 de Septiembre de 2016</span>
+                    </a>
 
-    </li>
-    <li class="w3-padding-16">
-      <span onclick="this.parentElement.style.display='none'"
-     class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
-      <img src="img_avatar6.png" class="w3-left w3-circle w3-margin-right" style="width:60px">
-      <span class="w3-xlarge">Salon Pueyrredon | CABA</span><br>
-      <span>2 de Septiembre de 2016</span>
-      <a href="salon" class="quitar"></a>
-    </li>
-    <li class="w3-padding-16">
-      <span onclick="this.parentElement.style.display='none'"
-     class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
-      <img src="img_avatar6.png" class="w3-left w3-circle w3-margin-right" style="width:60px">
-      <span class="w3-xlarge">Loca Bohemia | CABA</span><br>
-      <span>20 de agosto de 2016</span>
-      <a href="locabohemia" class="quitar"></a>
-    </li>
+                </li>
+                <li class="w3-padding-16">
+                    <span onclick="this.parentElement.style.display='none'" class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
+                    <a href="salon" class="quitar"> <img src="/imagenes/galeria/fechas/salon3-9/banda1.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
+                    <span class="w3-xlarge">Salon Pueyrredon | CABA</span><br>
+                    <span>2 de Septiembre de 2016</span>
+                    </a>
+                </li>
+                <li class="w3-padding-16">
+                    <span onclick="this.parentElement.style.display='none'" class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
+                    <a href="locabohemia" class="quitar"> <img src="/imagenes/galeria/fechas/loca20-8/band4.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
+                    <span class="w3-xlarge">Loca Bohemia | CABA</span><br>
+                    <span>20 de agosto de 2016</span>
+                    </a>
+                </li>
 
-  </ul>
-</div>
+            </ul>
+        </div>
     </body>
 </html>
