--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -17,31 +17,40 @@
         <br>
         <br>
         <br>
-        <div class="w3-container w3-leftbar w3-border-green w3-light-green">
-            <a href="pquesaavedra" class="quitar"> <h3>Parque Saavedra | 24 de Septiembre del 2016</h3>
-            <p>Cuarto show de Buena Cosecha, primero al aire libre !!</p></a>
+
+        <div class="w3-container">
+            <ul class="w3-ul w3-card-4 w3-hoverable w3-green">
+                <li class="w3-padding-16">
+                    <span onclick="this.parentElement.style.display='none'" class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
+                    <a href="pquesaavedra" class="quitar"> <img src="/imagenes/galeria/fechas/pquesaavedra1-10/banda6.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
+                    <span class="w3-xlarge">Parque Saavedra | 15 hs | CABA</span><br>
+                    <span>24 de Septiembre de 2016</span>
+                    </a>
+                </li>
+                <li class="w3-padding-16">
+                    <span onclick="this.parentElement.style.display='none'" class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
+                    <a href="whitevinyl" class="quitar"> <img src="/imagenes/galeria/fechas/whitevinyl24-10/banda2.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
+                    <span class="w3-xlarge">White Vinyl | 23 hs | Adrogue</span><br>
+                    <span>17 de Septiembre de 2016</span>
+                    </a>
+
+                </li>
+                <li class="w3-padding-16">
+                    <span onclick="this.parentElement.style.display='none'" class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
+                    <a href="salon" class="quitar"> <img src="/imagenes/galeria/fechas/salon3-9/banda1.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
+                    <span class="w3-xlarge">Salon Pueyrredon | 05 hs | CABA</span><br>
+                    <span>2 de Septiembre de 2016</span>
+                    </a>
+                </li>
+                <li class="w3-padding-16">
+                    <span onclick="this.parentElement.style.display='none'" class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
+                    <a href="locabohemia" class="quitar"> <img src="/imagenes/galeria/fechas/loca20-8/band4.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
+                    <span class="w3-xlarge">Loca Bohemia | 01 hs CABA</span><br>
+                    <span>20 de agosto de 2016</span>
+                    </a>
+                </li>
+
+            </ul>
         </div>
-        <br>
-
-        <div class="w3-container w3-leftbar w3-border-khaki w3-lime">
-            <a href="whitevinyl" class="quitar"> <h3>White Vinyl | 17 de Septiembre del 2016</h3>
-            <p>Tercer show de Buena Cosecha, compartiendo escenario con Riddim !!</p></a>
-        </div>
-        <br>
-
-        <div class="w3-container w3-leftbar w3-border-cyan w3-light-blue">
-            <a href="salon" class="quitar"> <h3>Salon Pueyrredon | 2 de Septiembre del 2016</h3>
-            <p>Segundo show de Buena Cosecha !!</p></a>
-        </div>
-        <br>
-
-        <div class="w3-container w3-leftbar w3-border-deep-orange w3-orange">
-            <a href="locabohemia" class="quitar"> <h3>Loca Bohemia | 20 de Agosto del 2016</h3>
-            <p>Show debut de Buena Cosecha !!</p></a>
-        </div>
-        <br>
-
-
-
     </body>
 </html>
