--- a/views/secciones/pasados.erb
+++ b/views/secciones/pasados.erb
@@ -31,7 +31,7 @@
                     <span onclick="this.parentElement.style.display='none'" class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
                     <a href="whitevinyl" class="quitar"> <img src="/imagenes/galeria/fechas/whitevinyl24-10/banda2.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
                     <span class="w3-xlarge">White Vinyl | 23 hs | Adrogue</span><br>
-                    <span class="w3-large">>17 de Septiembre de 2016</span>
+                    <span class="w3-large">17 de Septiembre de 2016</span>
                     </a>
 
                 </li>
@@ -39,14 +39,14 @@
                     <span onclick="this.parentElement.style.display='none'" class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
                     <a href="salon" class="quitar"> <img src="/imagenes/galeria/fechas/salon3-9/banda1.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
                     <span class="w3-xlarge">Salon Pueyrredon | 05 hs | CABA</span><br>
-                    <span class="w3-large">>2 de Septiembre de 2016</span>
+                    <span class="w3-large">2 de Septiembre de 2016</span>
                     </a>
                 </li>
                 <li class="w3-padding-16">
                     <span onclick="this.parentElement.style.display='none'" class="w3-closebtn w3-padding w3-margin-right w3-medium">x</span>
                     <a href="locabohemia" class="quitar"> <img src="/imagenes/galeria/fechas/loca20-8/band4.jpg" class="w3-left w3-circle w3-margin-right" style="width:60px">
                     <span class="w3-xlarge">Loca Bohemia | 01 hs CABA</span><br>
-                    <span class="w3-large">>20 de agosto de 2016</span>
+                    <span class="w3-large">20 de agosto de 2016</span>
                     </a>
                 </li>
 
