--- a/views/index.erb
+++ b/views/index.erb
@@ -132,7 +132,6 @@
                 </div>
             </div>
 
-
             <!-- The Band Section -->
             <div class="w3-container w3-content w3-center w3-padding-64" style="max-width:800px">
                 <h2 class="w3-wide">LA BANDA</h2>
@@ -200,30 +199,11 @@
 
                 <!-- The Contact Section -->
                 <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
-                    <h2 class="w3-wide w3-center">CONTACTO</h2>
-                    <p class="w3-opacity w3-center">
-                        <i>Fan? Organizar un recital? Dejanos tu mensaje !!</i>
-                    </p>
+                    <h2 class="w3-wide w3-center">CONTACTOS</h2>
                     <div class="w3-row w3-padding-32">
                         <div class="w3-col m6 w3-large w3-margin-bottom">
-                            <i class="fa fa-map-marker" style="width:30px"></i>
-                            Buenos Aires, Argentina<br>
-                            <i class="fa fa-phone" style="width:30px"></i>
-                            Telefono: +54 11 --------<br>
                             <i class="fa fa-envelope" style="width:30px"></i>
                             Email: info@buenacosecha.com.ar<br>
-                        </div>
-                        <div class="w3-col m6">
-                            <div class="w3-row-padding" style="margin:0 -16px 8px -16px">
-                                <div class="w3-half">
-                                    <input class="w3-input w3-border" type="text" placeholder="Nombre">
-                                </div>
-                                <div class="w3-half">
-                                    <input class="w3-input w3-border" type="text" placeholder="Email">
-                                </div>
-                            </div>
-                            <input class="w3-input w3-border" type="text" placeholder="Comentario">
-                            <button class="w3-btn w3-section w3-right">Enviar</button>
                         </div>
                     </div>
                 </div>
