--- a/views/fechas/pquesaavedra.erb
+++ b/views/fechas/pquesaavedra.erb
@@ -81,6 +81,10 @@
               </div>
           </div>
       </div>
+      <div class="w3-container">
+        <a href="https://www.facebook.com/buenacosechabanda/photos/?tab=album&album_id=1104897319594142"><h4>Mas fotos aca!</h4></a>
+
+      </div>
 
   </body>
 </html>
