--- a/views/index.erb
+++ b/views/index.erb
@@ -198,9 +198,9 @@
                 <!-- The Tour Section -->
 
                 <!-- The Contact Section -->
-                <div class="w3-container w3-content w3-padding-64" style="max-width:800px">
+                <div class="w3-container w3-content w3-padding-64 w3-center" style="max-width:800px">
                     <h2 class="w3-wide w3-center">CONTACTOS</h2>
-                    <div class="w3-row w3-padding-32 w3-center">
+                    <div class="w3-row w3-padding-32">
                         <div class="w3-col m6 w3-large w3-margin-bottom">
                             <i class="fa fa-envelope" style="width:30px"></i>
                             Email: info@buenacosecha.com.ar<br>
