--- a/views/fechas/pquesaavedra.erb
+++ b/views/fechas/pquesaavedra.erb
@@ -96,8 +96,8 @@
               </div>
           </div>
       </div>
-      <div class="w3-container quitar">
-        <a target="_blank" href="https://www.facebook.com/buenacosechabanda/photos/?tab=album&album_id=1104897319594142"><h5>Mas fotos aca!</h5></a>
+      <div class="w3-container ">
+        <a class="quitar" target="_blank" href="https://www.facebook.com/buenacosechabanda/photos/?tab=album&album_id=1104897319594142"><h5>Mas fotos aca!</h5></a>
 
       </div>
 
