--- a/views/fechas/pquesaavedra.erb
+++ b/views/fechas/pquesaavedra.erb
@@ -91,7 +91,9 @@
           </div>
       </div>
       <div class="w3-container ">
-        <a class="quitar" target="_blank" href="https://www.facebook.com/buenacosechabanda/photos/?tab=album&album_id=1104897319594142"><h5>Mas fotos aca!</h5></a>
+        <a class="quitar" target="_blank" href="https://www.facebook.com/buenacosechabanda/photos/?tab=album&album_id=1104897319594142"><h5>Mas fotos aca!</h5>
+          <i class="icon-facebook-sign icon-3x"></i> 
+        </a>
 
       </div>
 
