--- a/views/layout.erb
+++ b/views/layout.erb
@@ -21,7 +21,7 @@
             </li>
             <li>
                 <a href="/" class="w3-hover-none w3-hover-text-grey w3-padding-large">
-                  <i class="material-icons">home</i>
+                  <i class="fa fa-home fa-3x" aria-hidden="true"></i>
                 </a>
 
             </li>
@@ -56,9 +56,7 @@
                 </div>
             </li> -->
             <li class="w3-hide-small w3-right">
-                <a href="javascript:void(0)" class="w3-padding-large w3-hover-red">
-                    <i class="fa fa-search"></i>
-                </a>
+                <a href="javascript:void(0)"> <i id="social-se" class="fa fa-search fa-3x social"></i></a>
             </li>
             <li class="w3-hide-small w3-right">
                 <a href="mailto:info@buenacosecha.com.ar?subject=contacto" target="_blank"><i id="social-em" class="fa fa-envelope-square fa-3x social"></i></a>
