--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,7 +14,7 @@
 
     <!-- Navbar -->
     <div class="w3-top">
-        <ul class="w3-navbar w3-black w3-card-2 w3-right-align">
+        <ul class="w3-navbar w3-black w3-card-2 w3-right-align w3-xlarge">
             <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
                 <a class="w3-padding-large" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu">
                 </a>
