--- a/views/layout.erb
+++ b/views/layout.erb
@@ -14,7 +14,7 @@
 
     <!-- Navbar -->
     <div class="w3-top">
-        <ul class="w3-navbar w3-black w3-card-2 w3-right-align w3-xlarge">
+        <ul class="w3-navbar w3-black w3-card-2 w3-right-align">
             <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
                 <a class="w3-padding-large" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu">
                 </a>
@@ -27,7 +27,7 @@
             </li>
             <li class="w3-hide-small w3-dropdown-hover">
                 <a href="multimedia" class="w3-hover-none w3-padding-large" title="Musica">
-                    Música
+                    <h3>Música</h3>
                 </a>
                 <div class="w3-dropdown-content w3-white w3-card-4 w3-left-align">
                     <a href="audios">Audios</a>
@@ -38,7 +38,7 @@
 
             <li class="w3-hide-small w3-dropdown-hover">
                 <a href="shows" class="w3-hover-none w3-padding-large" title="Musica">
-                    Shows
+                    <h3>Shows</h3>
                 </a>
                 <div class="w3-dropdown-content w3-white w3-card-2 w3-left-align">
                     <a href="proximos">Próximos</a>
