--- a/views/index.erb
+++ b/views/index.erb
@@ -193,7 +193,7 @@
 
                 <!-- The Contact Section -->
                 <div class="w3-container w3-content w3-padding-64 w3-center" style="max-width:800px">
-                    <h2 class="w3-wide w3-center">CONTACTOS</h2>
+                    <h2 class="w3-wide w3-center">CONTACTO</h2>
                     <div class="w3-row w3-padding-32">
                         <div class="w3-col m6 w3-large w3-margin-bottom">
                             <i class="fa fa-envelope" style="width:30px"></i>
@@ -206,23 +206,7 @@
             </div>
 
             <!-- Footer -->
-            <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
-                <a href="https://www.facebook.com/buenacosechabanda/" class="w3-hover-text-indigo" target="_blank">
-                    <i class="fa fa-facebook-official"></i>
-                </a>
-                <a href="https://www.instagram.com/buenacosechaska" class="w3-hover-text-red" target="_blank">
-                    <i class="icon-instagram"></i>
-                </a>
-                <a href="https://www.twitter.com/buenacosechaska" class="w3-hover-text-light-blue" target="_blank">
-                    <i class="fa fa-twitter"></i>
-                </a>
-                <a href="mailto:info@buenacosecha.com.ar?subject=contacto" class="w3-hover-text-light-blue" target="_blank">
-                    <i class="icon-envelope"></i>
-                </a>
-
-                <p class="w3-medium">Creado por Buena Cosecha - 2016
-                    <a href="#" target="_blank">https://www.facebook.com/buenacosechabanda</a>
-                </p>
+            <footer>
             </footer>
 
             <script src="/js/slide.js"></script>
