--- a/views/layout.erb
+++ b/views/layout.erb
@@ -16,12 +16,11 @@
     <div class="w3-top">
         <ul class="w3-navbar w3-black w3-card-2 w3-right-align">
             <li class="w3-hide-medium w3-hide-large w3-opennav w3-right">
-                <a class="w3-padding-large" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu">
-                </a>
+                <a class="w3-padding-large" href="javascript:void(0)" onclick="myFunction()" title="Toggle Navigation Menu"></a>
             </li>
             <li>
                 <a href="/" class="w3-hover-none w3-hover-text-grey w3-padding-large">
-                  <i id="social-ho" class="fa fa-home fa-3x social"> </i>
+                    <i id="social-ho" class="fa fa-home fa-3x social"></i>
                 </a>
 
             </li>
@@ -56,22 +55,34 @@
                 </div>
             </li> -->
             <li class="w3-hide-small w3-right">
-                <a href="javascript:void(0)"> <i id="social-se" class="fa fa-search fa-3x social"></i></a>
+                <a href="javascript:void(0)">
+                    <i id="social-se" class="fa fa-search fa-3x social"></i>
+                </a>
             </li>
             <li class="w3-hide-small w3-right">
-                <a href="mailto:info@buenacosecha.com.ar?subject=contacto" target="_blank"><i id="social-em" class="fa fa-envelope-square fa-3x social"></i></a>
+                <a href="mailto:info@buenacosecha.com.ar?subject=contacto" target="_blank">
+                    <i id="social-em" class="fa fa-envelope-square fa-3x social"></i>
+                </a>
             </li>
             <li class="w3-hide-small w3-right">
-                <a href="https://www.instagram.com/buenacosechaska" target="_blank"><i id="social-in" class="fa fa-instagram fa-3x social"></i></a>
+                <a href="https://www.instagram.com/buenacosechaska" target="_blank">
+                    <i id="social-in" class="fa fa-instagram fa-3x social"></i>
+                </a>
             </li>
             <li class="w3-hide-small w3-right">
-                <a href="https://www.youtube.com/buenacosecha" target="_blank"><i id="social-yt" class="fa fa-youtube-play fa-3x social"></i></a>
+                <a href="https://www.youtube.com/buenacosecha" target="_blank">
+                    <i id="social-yt" class="fa fa-youtube-play fa-3x social"></i>
+                </a>
             </li>
             <li class="w3-hide-small w3-right">
-                <a href="https://www.twitter.com/buenacosechaska" target="_blank"><i  id="social-tw" class="fa fa-twitter-square fa-3x social"></i></a>
+                <a href="https://www.twitter.com/buenacosechaska" target="_blank">
+                    <i id="social-tw" class="fa fa-twitter-square fa-3x social"></i>
+                </a>
             </li>
             <li class="w3-hide-small w3-right">
-                <a href="https://www.facebook.com/buenacosechabanda/" target="_blank"><i  id="social-fb" class="fa fa-facebook-square fa-3x social"></i></a>
+                <a href="https://www.facebook.com/buenacosechabanda/" target="_blank">
+                    <i id="social-fb" class="fa fa-facebook-square fa-3x social"></i>
+                </a>
             </li>
         </ul>
     </div>
@@ -88,7 +99,7 @@
             <li>
                 <a class="w3-padding-large" href="mailto:info@buenacosecha.com.ar?subject=contacto">Contacto</a>
             </li>
-           <!-- <li>
+            <!-- <li>
                 <a class="w3-padding-large" href="entradas">Mas</a>
             </li> -->
         </ul>
@@ -110,4 +121,42 @@
                 <%= yield %>
             </div>
         </body>
+        <footer class="w3-container w3-padding-64 w3-center w3-opacity w3-light-grey w3-xlarge">
+            <ul>
+                <li class="w3-hide-small w3-right">
+                    <a href="javascript:void(0)">
+                        <i id="social-se" class="fa fa-search fa-2x social"></i>
+                    </a>
+                </li>
+                <li class="w3-hide-small w3-right">
+                    <a href="mailto:info@buenacosecha.com.ar?subject=contacto" target="_blank">
+                        <i id="social-em" class="fa fa-envelope-square fa-2x social"></i>
+                    </a>
+                </li>
+                <li class="w3-hide-small w3-right">
+                    <a href="https://www.instagram.com/buenacosechaska" target="_blank">
+                        <i id="social-in" class="fa fa-instagram fa-2x social"></i>
+                    </a>
+                </li>
+                <li class="w3-hide-small w3-right">
+                    <a href="https://www.youtube.com/buenacosecha" target="_blank">
+                        <i id="social-yt" class="fa fa-youtube-play fa-2x social"></i>
+                    </a>
+                </li>
+                <li class="w3-hide-small w3-right">
+                    <a href="https://www.twitter.com/buenacosechaska" target="_blank">
+                        <i id="social-tw" class="fa fa-twitter-square fa-2x social"></i>
+                    </a>
+                </li>
+                <li class="w3-hide-small w3-right">
+                    <a href="https://www.facebook.com/buenacosechabanda/" target="_blank">
+                        <i id="social-fb" class="fa fa-facebook-square fa-2x social"></i>
+                    </a>
+                </li>
+            </ul>
+
+            <p class="w3-medium">Creado por Buena Cosecha - 2016
+            </p>
+
+        </footer>
     </html>
