--- a/views/layout.erb
+++ b/views/layout.erb
@@ -121,40 +121,35 @@
                 <%= yield %>
             </div>
         </body>
-        <footer class="w3-container w3-padding-16 w3-center w3-opacity w3-light-grey w3-xlarge w3-center">
-            <div class="w3-container w3-content w3-padding-16" style="max-width:800px">
-            <ul>
-                <li class="w3-hide-small w3-center">
-                    <a href="mailto:info@buenacosecha.com.ar?subject=contacto" target="_blank">
+        <footer class="w3-container w3-padding-16 w3-opacity w3-light-grey w3-centered w3-bottom">
+            <table class="w3-table-all w3-centered">
+                <h5>
+                    CONTACTO
+                </h5>
+                <tr>
+                <th><a href="mailto:info@buenacosecha.com.ar?subject=contacto" target="_blank">
                         <i id="social-em" class="fa fa-envelope-square fa-2x social"></i>
                     </a>
-                </li>
-                <li class="w3-hide-small w3-center">
-                    <a href="https://www.instagram.com/buenacosechaska" target="_blank">
+                </th>
+                <th><a href="https://www.instagram.com/buenacosechaska" target="_blank">
                         <i id="social-in" class="fa fa-instagram fa-2x social"></i>
                     </a>
-                </li>
-                <li class="w3-hide-small w3-center">
-                    <a href="https://www.youtube.com/channel/UClUAerSDxrXUJON4TXJIing" target="_blank">
+                </th>
+                <th><a href="https://www.youtube.com/channel/UClUAerSDxrXUJON4TXJIing" target="_blank">
                         <i id="social-yt" class="fa fa-youtube-play fa-2x social"></i>
                     </a>
-                </li>
-                <li class="w3-hide-small w3-center">
-                    <a href="https://www.twitter.com/buenacosechaska" target="_blank">
+                </th>
+                <th><a href="https://www.twitter.com/buenacosechaska" target="_blank">
                         <i id="social-tw" class="fa fa-twitter-square fa-2x social"></i>
                     </a>
-                </li>
-                <li class="w3-hide-small w3-center">
-                    <a href="https://www.facebook.com/buenacosechabanda/" target="_blank">
+                </th>
+                <th><a href="https://www.facebook.com/buenacosechabanda/" target="_blank">
                         <i id="social-fb" class="fa fa-facebook-square fa-2x social"></i>
                     </a>
-                </li>
-            </ul>
+                </th>
+            </tr>
+            <p class="w3-medium">Creado por Buena Cosecha - 2016</p>
+        </div>
 
-            <p class="w3-medium">Creado por Buena Cosecha - 2016
-            </p>
-          </div>
-
-
-        </footer>
-    </html>
+    </footer>
+</html>
